# Silicon

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml  docs.yml
cmake/: AddModule.cmake  AddSiliconTest.cmake  CompileShader.cmake  add_module.cmake
cmake/Desktop/: AmendDependenciesList.cmake  AmendSourcesList.cmake  ResolveDependencies.cmake  ResolveModules.cmake
cmake/Web/: AmendSourcesList.cmake  BuildOptions.cmake  ResolveDependencies.cmake  ResolveModules.cmake
editor/: CMakeLists.txt  Editor.cpp
include/: CMakeLists.txt
include/Core/: Core.hpp
include/Silicon/: Allocator.hpp  Asset.hpp  Async.hpp  Config.hpp.in  Event.hpp  Localization.hpp  Log.hpp  Node.hpp  Renderer.hpp  Shader.hpp  Silicon.hpp  Types.hpp  Window.hpp
include/Silicon/Renderer/: Renderer.hpp  Vertex.hpp
localizations/: Silicon_en_US.plist
scripts/: setup.ps1  setup.sh
src/: Asset.cpp  Async.cpp  Core.cpp  Event.cpp  Localization.cpp  Log.cpp  Modules.cpp.in  Modules.hpp  Node.cpp  Renderer.cpp  Silicon.cpp  Window.cpp
src/desktop/: CMakeLists.txt  Run.cpp  desktop.cmake
src/modules/: add_module.cmake
src/modules/Desktop/: CMakeLists.txt  Desktop.cpp  Event.cpp  Window.cpp
src/modules/Desktop/include/Silicon/Desktop/: Event.hpp
src/modules/Extension/: CMakeLists.txt  Extension.cpp  Extension.hpp
src/modules/Silicon/Desktop/: CMakeLists.txt  Desktop.cpp  Desktop.hpp  Event.cpp  Event.hpp  Window.cpp  Window.hpp
src/modules/Silicon/VulkanRenderer/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.hpp
src/modules/VulkanRenderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Device.cpp  FrameData.cpp  Framebuffer.cpp  Framebuffer.hpp  Handle.hpp  ImageView.cpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  RenderPass.cpp  Semaphore.cpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  VulkanRenderer.cpp
src/modules/VulkanRenderer/include/Silicon/VulkanRenderer/: VulkanRenderer.hpp
src/vulkan/: CMakeLists.txt  CommandPool.cpp  CommandPool.hpp  Device.hpp  Fence.cpp  Fence.hpp  FrameData.hpp  Handle.cpp  ImageView.hpp  Instance.hpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.hpp  RequestableItem.hpp  Semaphore.hpp  Shader.cpp  Shader.hpp  Surface.hpp  SwapChain.hpp  VMA.cpp  VulkanRenderer.cpp  vulkan.cmake
src/web/: CMakeLists.txt  Run.cpp  web.cmake
test/EngineInit/: EngineInit.cpp
test/PubSub/: PubSub.cpp
test/SimpleNodes/: SimpleNodes.cpp
